style: fix text align

--- a/sass/main-section.scss
+++ b/sass/main-section.scss
@@ -59,6 +59,7 @@ article {
 
     &-title {
       font-size: 1.2rem;
+      align-self: center;
       color: #Fff;
     }
     
